--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
 [workspace]
-members = [
-    "yozuk", 
-    "yozuk-sdk", 
-    "yozuk-bundle",
-    "skillset",
-    "zuk",
-    "helpers/*"
-]
+members = ["yozuk", "yozuk-sdk", "yozuk-bundle", "skillset", "zuk", "helpers/*"]
 resolver = "2"
 
 [profile.release]
