--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -17,7 +17,9 @@ anyhow = "1.0.56"
 base64 = "0.13.0"
 bigdecimal = { version = "0.3.0", optional = true }
 blake2 = { version = "0.10.4", optional = true }
-blake3 = { version = "1.3.1", default-features = false, features = ["traits-preview"], optional = true }
+blake3 = { version = "1.3.1", default-features = false, features = [
+  "traits-preview",
+], optional = true }
 chardetng = { version = "0.1.17", optional = true }
 chrono = { version = "0.4.19", features = ["wasmbind"], optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
@@ -57,12 +59,41 @@ yozuk-helper-preprocessor = "0.11.0"
 yozuk-sdk = "0.11.0"
 
 [features]
-default = ["yozuk-skill-mediatype", "yozuk-skill-version", "yozuk-skill-base64", "yozuk-skill-english", "yozuk-skill-smalltalk", "yozuk-skill-numeric", "yozuk-skill-calc", "yozuk-skill-uuid", "yozuk-skill-lipsum", "yozuk-skill-nanoid", "yozuk-skill-punycode", "yozuk-skill-dice", "yozuk-skill-digest", "yozuk-skill-color", "yozuk-skill-time", "yozuk-skill-unit", "yozuk-skill-geo", "yozuk-skill-password"]
+default = [
+  "yozuk-skill-mediatype",
+  "yozuk-skill-version",
+  "yozuk-skill-base64",
+  "yozuk-skill-english",
+  "yozuk-skill-smalltalk",
+  "yozuk-skill-numeric",
+  "yozuk-skill-calc",
+  "yozuk-skill-uuid",
+  "yozuk-skill-lipsum",
+  "yozuk-skill-nanoid",
+  "yozuk-skill-punycode",
+  "yozuk-skill-dice",
+  "yozuk-skill-digest",
+  "yozuk-skill-color",
+  "yozuk-skill-time",
+  "yozuk-skill-unit",
+  "yozuk-skill-geo",
+  "yozuk-skill-password",
+]
 yozuk-skill-base64 = ["chardetng"]
 yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-dice = ["rand", "pest", "pest_derive"]
-yozuk-skill-digest = ["digest", "hex", "md-5", "sha1", "sha2", "sha3", "crc_all", "blake2", "blake3"]
+yozuk-skill-digest = [
+  "digest",
+  "hex",
+  "md-5",
+  "sha1",
+  "sha2",
+  "sha3",
+  "crc_all",
+  "blake2",
+  "blake3",
+]
 yozuk-skill-english = []
 yozuk-skill-geo = ["open-location-code"]
 yozuk-skill-lipsum = ["lipsum"]
