--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -16,6 +16,7 @@ readme = "README.md"
 anyhow = "1.0.56"
 base64 = "0.13.0"
 bigdecimal = { version = "0.3.0", optional = true }
+bitcoin = { version = "0.28.0", optional = true }
 blake2 = { version = "0.10.4", optional = true }
 blake3 = { version = "1.3.1", default-features = false, features = [
   "traits-preview",
@@ -78,6 +79,7 @@ default = [
   "yozuk-skill-unit",
   "yozuk-skill-geo",
   "yozuk-skill-password",
+  "yozuk-skill-bitcoin",
 ]
 yozuk-skill-base64 = ["chardetng"]
 yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
@@ -107,3 +109,5 @@ yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
 yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
+yozuk-skill-bitcoin = ["bitcoin"]
+
