--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -16,7 +16,7 @@ readme = "README.md"
 anyhow = "1.0.56"
 base64 = "0.13.0"
 bigdecimal = { version = "0.3.0", optional = true }
-bitcoin = { version = "0.28.0", optional = true }
+bitcoin = { version = "0.28.0", features = ["rand"], optional = true }
 blake2 = { version = "0.10.4", optional = true }
 blake3 = { version = "1.3.1", default-features = false, features = [
   "traits-preview",
