--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -61,27 +61,7 @@ yozuk-helper-preprocessor = "0.11.1"
 yozuk-sdk = "0.11.1"
 
 [features]
-default = [
-  "yozuk-skill-mediatype",
-  "yozuk-skill-version",
-  "yozuk-skill-base64",
-  "yozuk-skill-english",
-  "yozuk-skill-smalltalk",
-  "yozuk-skill-numeric",
-  "yozuk-skill-calc",
-  "yozuk-skill-uuid",
-  "yozuk-skill-lipsum",
-  "yozuk-skill-nanoid",
-  "yozuk-skill-punycode",
-  "yozuk-skill-dice",
-  "yozuk-skill-digest",
-  "yozuk-skill-color",
-  "yozuk-skill-time",
-  "yozuk-skill-unit",
-  "yozuk-skill-geo",
-  "yozuk-skill-password",
-  "yozuk-skill-bitcoin",
-]
+default = []
 yozuk-skill-base64 = ["chardetng"]
 yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
 yozuk-skill-color = ["css-color", "palette"]
