--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -24,12 +24,13 @@ entropy = "0.4.1"
 mediatype = "0.19.2"
 nanoid = "0.4.0"
 num_cpus = "1.13.1"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 punycode = "0.4.1"
 rayon = { version = "1.5.1", optional = true }
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
-shell-words = "1.1.0"
 slog = "2.7.0"
 sloggers = "2.1.1"
 yozuk-core-skillset = "0.11.2"
