--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -21,6 +21,7 @@ crfs = "0.2.0"
 crfsuite = { version = "0.3.1", optional = true }
 distance = "0.4.0"
 entropy = "0.4.1"
+itertools = "0.10.3"
 mediatype = "0.19.2"
 nanoid = "0.4.0"
 num_cpus = "1.13.1"
