--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,19 +27,25 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-stable-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Set Env
+        run: node -p "'platform=' + process.argv[1].toLowerCase()" ${{ runner.os }}-${{ runner.arch }} >> $GITHUB_ENV
+        if: ${{ matrix.os != 'windows-latest' }}
+      - name: Set Env
+        run: node -p "'platform=' + process.argv[1].toLowerCase()" ${{ runner.os }}-${{ runner.arch }} >> $env:GITHUB_ENV
+        if: ${{ matrix.os == 'windows-latest' }}
       - name: Build project
         run: cargo b --bin zuk --release
       - name: Dump model data
         run: target/release/zuk --dump-model model.data
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Make archive
-        run: tar -C target/release -Jcvf zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.tar.xz zuk
+        run: tar -C target/release -Jcvf zuk-${{ env.platform }}.tar.xz zuk
         if: ${{ matrix.os != 'windows-latest' }}
       - name: Make archive
-        run: tar -C target/release -acf zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.zip zuk.exe
+        run: tar -C target/release -acf zuk-${{ env.platform }}.zip zuk.exe
         if: ${{ matrix.os == 'windows-latest' }}
       - name: Make model archive
-        run: xz model.data -c > model-${{ github.ref_name }}.xz
+        run: xz model.data -c > model.xz
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Create release
         env:
@@ -54,5 +60,5 @@ jobs:
       - name: Upload archive
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.ref_name }} zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.zip
+        run: gh release upload ${{ github.ref_name }} zuk-${{ env.platform }}.zip
         if: ${{ matrix.os == 'windows-latest' }}
