--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -17,22 +17,19 @@ anyhow = "1.0.56"
 bytes = "1.1.0"
 const-sha1 = "0.2.0"
 crfs = "0.2.0"
-crfsuite = { version = "0.3.1", optional = true }
 distance = "0.4.0"
-entropy = "0.4.1"
-itertools = "0.10.3"
 mediatype = "0.19.2"
-nanoid = "0.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
-punycode = "0.4.1"
 rayon = { version = "1.5.1", optional = true }
 yozuk-core-skillset = "0.13.1"
 yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.13.0"
+yozuk-model = "0.13.0"
 
 [features]
 default = ["default-skills", "rayon"]
+rayon = ["dep:rayon", "yozuk-model/rayon"]
 default-skills = [
   "yozuk-skill-mediatype",
   "yozuk-skill-version",
@@ -52,7 +49,6 @@ default-skills = [
   "yozuk-skill-geo",
   "yozuk-skill-password",
 ]
-modelgen = ["crfsuite", "rayon"]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
 yozuk-skill-color = ["yozuk-core-skillset/yozuk-skill-color"]
@@ -74,3 +70,9 @@ yozuk-skill-bitcoin = ["yozuk-core-skillset/yozuk-skill-bitcoin"]
 
 [dev-dependencies]
 lazy_static = "1.4.0"
+
+[build-dependencies]
+anyhow = "1.0.56"
+yozuk-core-skillset = "0.13.1"
+yozuk-sdk = "0.13.0"
+yozuk-model = { version = "0.13.0", features = ["modelgen"] }
