--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -19,11 +19,13 @@ clap = { version = "3.1.6", features = ["derive"] }
 content_inspector = "0.2.4"
 crossterm = "0.23.1"
 hexyl = "0.9.0"
+json-rpc2 = { version = "0.11.1", optional = true }
 localzone = "0.2.0"
 mediatype = "0.19.2"
 owo-colors = "3.3.0"
 rustyline = "9.1.2"
 rustyline-derive = "0.6.0"
+serde_json = { version = "1.0.81", optional = true }
 shell-words = "1.1.0"
 sys-locale = "0.2.0"
 toml = "0.5.8"
@@ -31,4 +33,5 @@ yozuk = "0.14.1"
 yozuk-sdk = "0.14.1"
 
 [features]
-default = []
+default = ["rpc"]
+rpc = ["json-rpc2", "serde_json"]
