--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -15,6 +15,7 @@ readme = "../README.md"
 
 [dependencies]
 anyhow = "1.0.56"
+base64 = { version = "0.13.0", optional = true }
 clap = { version = "3.1.6", features = ["derive"] }
 content_inspector = "0.2.4"
 crossterm = "0.23.1"
@@ -36,4 +37,7 @@ yozuk-sdk = "0.14.1"
 
 [features]
 default = ["rpc"]
-rpc = ["json-rpc2", "serde", "serde_derive", "serde_json"]
+rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
+
+[dev-dependencies]
+tempfile = "3.3.0"
