--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -20,6 +20,8 @@ bytes = { version = "1.1.0", features = ["serde"] }
 itertools = "0.10.3"
 mediatype = { version = "0.19.3", features = ["serde"] }
 nanoid = "0.4.0"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 secstr = { version = "0.5.0", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
