--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -55,6 +55,7 @@ sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
 strum = { version = "0.24.0", features = ["derive"] }
 thiserror = "1.0.30"
+urlencoding = { version = "2.1.0", optional = true }
 uuid = { version = "1.0.0", features = ["v4"], optional = true }
 yozuk-helper-english = "0.1.0"
 yozuk-helper-preprocessor = "0.14.2"
@@ -90,3 +91,4 @@ yozuk-skill-unit = ["bigdecimal", "num-bigint"]
 yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
 yozuk-skill-bitcoin = ["bitcoin"]
+yozuk-skill-urlencode = ["urlencoding"]
