--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -15,6 +15,7 @@ readme = "README.md"
 [dependencies]
 anyhow = "1.0.56"
 base64 = "0.13.0"
+bech32 = { version = "0.8.1", optional = true }
 bigdecimal = { version = "0.3.0", optional = true }
 bitcoin = { version = "0.28.0", features = ["rand"], optional = true }
 blake2 = { version = "0.10.4", optional = true }
@@ -92,3 +93,4 @@ yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
 yozuk-skill-bitcoin = ["bitcoin"]
 yozuk-skill-urlencode = ["urlencoding"]
+yozuk-skill-bech32 = ["bech32"]
