--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -34,6 +34,9 @@ toml = "0.5.8"
 yozuk = { version = "0.14.2", features = ["rayon"] }
 yozuk-sdk = "0.14.2"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+extrasafe = "0.1.2"
+
 [features]
 default = ["rpc"]
 rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
