--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -36,6 +36,7 @@ yozuk-sdk = "0.14.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 extrasafe = "0.1.2"
+syscalls = "0.5.0"
 
 [features]
 default = ["rpc"]
