--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -35,12 +35,13 @@ yozuk = { version = "0.14.2", features = ["rayon"] }
 yozuk-sdk = "0.14.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-extrasafe = "0.1.2"
-syscalls = "0.5.0"
+extrasafe = { version = "0.1.2", optional = true }
+syscalls = { version = "0.5.0", optional = true }
 
 [features]
-default = ["rpc"]
+default = ["rpc", "secure-context"]
 rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
+secure-context = ["extrasafe", "syscalls"]
 
 [dev-dependencies]
 tempfile = "3.3.0"
