--- a/deny.toml
+++ b/deny.toml
@@ -77,7 +77,8 @@ allow = [
     "BSD-2-Clause",
     "BSD-3-Clause",
     "Unlicense",
-    "BSL-1.0"
+    "BSL-1.0",
+    "ISC"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
