--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -76,3 +76,4 @@ anyhow = "1.0.56"
 yozuk-core-skillset = "0.14.2"
 yozuk-sdk = "0.14.2"
 yozuk-model = { version = "0.14.2", features = ["modelgen"] }
+build-data = "0.1.3"
