--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -47,6 +47,7 @@ default-skills = [
   "yozuk-skill-password",
   "yozuk-skill-urlencode",
   "yozuk-skill-bech32",
+  "yozuk-skill-prime",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -67,6 +68,7 @@ yozuk-skill-version = ["yozuk-core-skillset/yozuk-skill-version"]
 yozuk-skill-bitcoin = ["yozuk-core-skillset/yozuk-skill-bitcoin"]
 yozuk-skill-urlencode = ["yozuk-core-skillset/yozuk-skill-urlencode"]
 yozuk-skill-bech32 = ["yozuk-core-skillset/yozuk-skill-bech32"]
+yozuk-skill-prime = ["yozuk-core-skillset/yozuk-skill-prime"]
 
 [dev-dependencies]
 lazy_static = "1.4.0"
