--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -25,3 +25,4 @@ secstr = { version = "0.5.0", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
+url = { version = "2.2.2", features = ["serde"] }
