--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -37,6 +37,7 @@ lipsum = { version = "0.8.0", optional = true }
 md-5 = { version = "0.10.1", optional = true }
 mediatype = "0.19.3"
 miller_rabin = { version = "1.1.0", optional = true }
+min_jwt = { version = "0.4.0", features = ["ring", "serde"] }
 nanoid = { version = "0.4.0", optional = true }
 num-bigint = { version = "0.4", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
