--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -37,7 +37,7 @@ lipsum = { version = "0.8.0", optional = true }
 md-5 = { version = "0.10.1", optional = true }
 mediatype = "0.19.3"
 miller_rabin = { version = "1.1.0", optional = true }
-min_jwt = { version = "0.4.0", features = ["ring", "serde"] }
+min_jwt = { version = "0.4.0", features = ["ring", "serde"], optional = true }
 nanoid = { version = "0.4.0", optional = true }
 num-bigint = { version = "0.4", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
@@ -94,3 +94,4 @@ yozuk-skill-bitcoin = ["bitcoin"]
 yozuk-skill-urlencode = ["urlencoding"]
 yozuk-skill-bech32 = ["bech32"]
 yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
+yozuk-skill-jwt = ["min_jwt"]
