--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -93,3 +93,4 @@ yozuk-skill-bitcoin = ["bitcoin"]
 yozuk-skill-urlencode = ["urlencoding"]
 yozuk-skill-bech32 = ["bech32"]
 yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
+yozuk-skill-jwt = []
