--- a/yozuk-model/Cargo.toml
+++ b/yozuk-model/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 
 [dependencies]
 anyhow = { version = "1.0.57", optional = true }
-bytes = { version = "1.1.0", optional = true }
+bytes = { version = "1.1.0" }
 crfsuite = { version = "0.3.1", optional = true }
 itertools = { version = "0.10.3", optional = true }
 nanoid = { version = "0.4.0", optional = true }
@@ -23,7 +23,8 @@ yozuk-sdk = "0.16.0"
 yozuk-helper-english = "0.1.0"
 punycode = "0.4.1"
 entropy = "0.4.1"
+crfs = "0.2.0"
 
 [features]
 default = []
-modelgen = ["crfsuite", "rayon", "anyhow", "bytes", "itertools", "nanoid"]
+modelgen = ["crfsuite", "rayon", "anyhow", "itertools", "nanoid"]
