yozuk-model: minify feature strings using blake2

--- a/yozuk-model/Cargo.toml
+++ b/yozuk-model/Cargo.toml
@@ -24,6 +24,8 @@ yozuk-helper-english = "0.1.0"
 punycode = "0.4.1"
 entropy = "0.4.1"
 crfs = "0.2.0"
+base64 = "0.13.0"
+blake2 = "0.10.4"
 
 [features]
 default = []
