--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -49,6 +49,7 @@ default-skills = [
   "yozuk-skill-bech32",
   "yozuk-skill-prime",
   "yozuk-skill-jwt",
+  "yozuk-skill-blurhash",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -71,6 +72,7 @@ yozuk-skill-urlencode = ["yozuk-core-skillset/yozuk-skill-urlencode"]
 yozuk-skill-bech32 = ["yozuk-core-skillset/yozuk-skill-bech32"]
 yozuk-skill-prime = ["yozuk-core-skillset/yozuk-skill-prime"]
 yozuk-skill-jwt = ["yozuk-core-skillset/yozuk-skill-jwt"]
+yozuk-skill-blurhash = ["yozuk-core-skillset/yozuk-skill-blurhash"]
 
 [dev-dependencies]
 lazy_static = "1.4.0"
