--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -44,6 +44,7 @@ open-location-code = { version = "0.1.0", optional = true }
 palette = { version = "0.6.0", optional = true }
 pest = { version = "2.1.3", optional = true }
 pest_derive = { version = "2.1.0", optional = true }
+pix = { version = "0.13.1", optional = true }
 png_pong = { version = "0.8.2", optional = true }
 prime_tools = { version = "0.3.4", optional = true }
 punycode = { version = "0.4.1", optional = true }
@@ -95,4 +96,4 @@ yozuk-skill-urlencode = ["urlencoding"]
 yozuk-skill-bech32 = ["bech32"]
 yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
 yozuk-skill-jwt = []
-yozuk-skill-blurhash = ["blurhash", "png_pong"]
+yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
