--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -22,6 +22,7 @@ blake2 = { version = "0.10.4", optional = true }
 blake3 = { version = "1.3.1", default-features = false, features = [
   "traits-preview",
 ], optional = true }
+blurhash = { version = "0.1.1", optional = true }
 chardetng = { version = "0.1.17", optional = true }
 clap = { version = "3.1.6", features = ["derive"] }
 const-sha1 = "0.2.0"
@@ -43,6 +44,8 @@ open-location-code = { version = "0.1.0", optional = true }
 palette = { version = "0.6.0", optional = true }
 pest = { version = "2.1.3", optional = true }
 pest_derive = { version = "2.1.0", optional = true }
+pix = { version = "0.13.1", optional = true }
+png_pong = { version = "0.8.2", optional = true }
 prime_tools = { version = "0.3.4", optional = true }
 punycode = { version = "0.4.1", optional = true }
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
@@ -93,3 +96,4 @@ yozuk-skill-urlencode = ["urlencoding"]
 yozuk-skill-bech32 = ["bech32"]
 yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
 yozuk-skill-jwt = []
+yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
