--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -20,7 +20,6 @@ clap = { version = "3.1.6", features = ["derive"] }
 crossterm = "0.23.1"
 hexyl = "0.9.0"
 json-rpc2 = { version = "0.11.1", optional = true }
-localzone = "0.2.0"
 mediatype = "0.19.3"
 owo-colors = "3.3.0"
 rustyline = "9.1.2"
@@ -30,6 +29,7 @@ serde_derive = { version = "1.0.137", optional = true }
 serde_json = { version = "1.0.81", optional = true }
 shell-words = "1.1.0"
 sys-locale = "0.2.0"
+time-tz = { version = "1.0.2", features = ["system"] }
 toml = "0.5.8"
 yozuk = { version = "0.16.2" }
 yozuk-sdk = "0.16.2"
