deny.toml: allow Zlib

--- a/deny.toml
+++ b/deny.toml
@@ -79,7 +79,8 @@ allow = [
     "Unlicense",
     "BSL-1.0",
     "ISC",
-    "OpenSSL"
+    "OpenSSL",
+    "Zlib"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
