--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -48,6 +48,7 @@ pix = { version = "0.13.1", optional = true }
 png_pong = { version = "0.8.2", optional = true }
 prime_tools = { version = "0.3.4", optional = true }
 punycode = { version = "0.4.1", optional = true }
+qrcode-generator = { version = "4.1.6", default-features = false, optional = true }
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
 serde = "1.0.136"
 serde_derive = "1.0.136"
@@ -97,3 +98,4 @@ yozuk-skill-bech32 = ["bech32"]
 yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
 yozuk-skill-jwt = []
 yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
+yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
