--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -99,3 +99,4 @@ yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
 yozuk-skill-jwt = []
 yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
 yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
+yozuk-skill-consts = ["bigdecimal"]
