--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -51,6 +51,7 @@ default-skills = [
   "yozuk-skill-jwt",
   "yozuk-skill-blurhash",
   "yozuk-skill-qrcode",
+  "yozuk-skill-consts",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -75,6 +76,7 @@ yozuk-skill-prime = ["yozuk-core-skillset/yozuk-skill-prime"]
 yozuk-skill-jwt = ["yozuk-core-skillset/yozuk-skill-jwt"]
 yozuk-skill-blurhash = ["yozuk-core-skillset/yozuk-skill-blurhash"]
 yozuk-skill-qrcode = ["yozuk-core-skillset/yozuk-skill-qrcode"]
+yozuk-skill-consts = ["yozuk-core-skillset/yozuk-skill-consts"]
 
 [dev-dependencies]
 lazy_static = "1.4.0"
