--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -35,6 +35,7 @@ hex = { version = "0.4.3", optional = true }
 itertools = "0.10.3"
 lazy_static = "1.4.0"
 lipsum = { version = "0.8.0", optional = true }
+maplit = "1.0.2"
 md-5 = { version = "0.10.1", optional = true }
 mediatype = "0.19.3"
 miller_rabin = { version = "1.1.0", optional = true }
