--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -59,6 +59,8 @@ sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
 strum = { version = "0.24.0", features = ["derive"] }
 thiserror = "1.0.30"
+time = { version = "0.3.9", features = ["formatting"], optional = true }
+time-tz = { version = "1.0.2", features = ["db"], optional = true }
 urlencoding = { version = "2.1.0", optional = true }
 uuid = { version = "1.0.0", features = ["v4"], optional = true }
 yozuk-helper-english = "0.16.3"
@@ -101,3 +103,4 @@ yozuk-skill-jwt = []
 yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
 yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
 yozuk-skill-consts = ["bigdecimal"]
+yozuk-skill-time = ["time", "time-tz"]
