skillset: upgrade miller_rabin to v1.1.1

--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -27,7 +27,7 @@ yozuk-model = "0.17.0"
 
 [features]
 default = ["default-skills"]
-rayon = ["dep:rayon", "yozuk-model/rayon"]
+rayon = ["dep:rayon", "yozuk-model/rayon", "yozuk-core-skillset/rayon"]
 default-skills = [
   "yozuk-skill-mediatype",
   "yozuk-skill-version",
