--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -38,7 +38,7 @@ lipsum = { version = "0.8.0", optional = true }
 maplit = "1.0.2"
 md-5 = { version = "0.10.1", optional = true }
 mediatype = "0.19.3"
-miller_rabin = { version = "1.1.0", optional = true }
+miller_rabin = { version = "1.1.1", default-features = false, optional = true }
 nanoid = { version = "0.4.0", optional = true }
 num-bigint = { version = "0.4", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
@@ -69,6 +69,7 @@ yozuk-sdk = "0.17.0"
 
 [features]
 default = []
+rayon = ["miller_rabin?/rayon"]
 yozuk-skill-base64 = ["chardetng"]
 yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
 yozuk-skill-color = ["css-color", "palette"]
