--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -16,7 +16,7 @@ readme = "README.md"
 anyhow = "1.0.56"
 base64 = "0.13.0"
 bech32 = { version = "0.9.0", optional = true }
-bigdecimal = { version = "0.3.0", optional = true }
+bigdecimal = "0.3.0"
 bitcoin = { version = "0.28.0", features = ["rand"], optional = true }
 blake2 = { version = "0.10.4", optional = true }
 blake3 = { version = "1.3.1", default-features = false, features = [
@@ -30,6 +30,7 @@ crc_all = { version = "0.2.0", optional = true }
 css-color = { version = "0.2.4", optional = true }
 digest = { version = "0.10.3", optional = true }
 entropy = "0.4.1"
+fraction = "0.10.0"
 getrandom = { version = "0.2.5", features = ["js"] }
 hex = { version = "0.4.3", optional = true }
 itertools = "0.10.3"
@@ -71,7 +72,7 @@ yozuk-sdk = "0.17.0"
 default = []
 rayon = ["miller_rabin?/rayon"]
 yozuk-skill-base64 = ["chardetng"]
-yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
+yozuk-skill-calc = ["pest", "pest_derive"]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-dice = ["rand", "pest", "pest_derive"]
 yozuk-skill-digest = [
@@ -93,15 +94,15 @@ yozuk-skill-numeric = []
 yozuk-skill-password = ["rand"]
 yozuk-skill-punycode = ["punycode"]
 yozuk-skill-smalltalk = []
-yozuk-skill-unit = ["bigdecimal", "num-bigint"]
+yozuk-skill-unit = ["num-bigint"]
 yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
 yozuk-skill-bitcoin = ["bitcoin"]
 yozuk-skill-urlencode = ["urlencoding"]
 yozuk-skill-bech32 = ["bech32"]
-yozuk-skill-prime = ["bigdecimal", "num-bigint", "miller_rabin", "prime_tools"]
+yozuk-skill-prime = ["num-bigint", "miller_rabin", "prime_tools"]
 yozuk-skill-jwt = []
 yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
 yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
-yozuk-skill-consts = ["bigdecimal"]
+yozuk-skill-consts = []
 yozuk-skill-time = ["time", "time-tz"]
