--- a/helpers/platform/Cargo.toml
+++ b/helpers/platform/Cargo.toml
@@ -13,5 +13,7 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-wasm-bindgen = "0.2.80"
 time_crate = { package = "time", version = "0.3.9" }
+
+[target.wasm32-unknown-unknown.dependencies]
+wasm-bindgen = "0.2.80"
