--- a/yozuk-wasm/package.json
+++ b/yozuk-wasm/package.json
@@ -2,7 +2,7 @@
   "name": "yozuk-wasm",
   "version": "0.1.0",
   "description": "",
-  "main": "web.js",
+  "main": "web.ts",
   "scripts": {
     "prepare": "node prepare.js"
   },
