--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -19,6 +19,7 @@ base64 = { version = "0.13.0", optional = true }
 chardetng = "0.1.17"
 clap = { version = "3.1.6", features = ["derive"] }
 crossterm = "0.23.1"
+css-color = "0.2.4"
 encoding_rs = "0.8.31"
 hexyl = "0.10.0"
 json-rpc2 = { version = "0.11.1", optional = true }
