--- a/yozuk-wasm/package.json
+++ b/yozuk-wasm/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "decompress": "^4.2.1",
     "download": "^8.0.0"
+  },
+  "dependencies": {
+    "js-base64": "^3.7.2"
   }
 }
