--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -107,3 +107,4 @@ yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
 yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
 yozuk-skill-consts = []
 yozuk-skill-time = ["time", "time-tz"]
+yozuk-skill-ip = []
