--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -34,7 +34,6 @@ fraction = "0.10.0"
 getrandom = { version = "0.2.5", features = ["js"] }
 hex = { version = "0.4.3", optional = true }
 itertools = "0.10.3"
-lazy_static = "1.4.0"
 lipsum = { version = "0.8.0", optional = true }
 maplit = "1.0.2"
 md-5 = { version = "0.10.1", optional = true }
@@ -68,6 +67,7 @@ yozuk-helper-english = "0.17.1"
 yozuk-helper-preprocessor = "0.18.0"
 yozuk-helper-platform = "0.17.2"
 yozuk-sdk = "0.18.0"
+once_cell = "1.12.0"
 
 [features]
 default = []
