--- a/yozuk-wasm/Cargo.toml
+++ b/yozuk-wasm/Cargo.toml
@@ -16,8 +16,8 @@ readme = "../README.md"
 crate-type = ["cdylib"]
 
 [dependencies]
-lazy_static = "1.4.0"
 mediatype = "0.19.3"
+once_cell = "1.12.0"
 serde = "1.0.137"
 serde_derive = "1.0.137"
 serde_json = "1.0.81"
