skill-smalltalk: use table-based command resolution

--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -94,7 +94,7 @@ yozuk-skill-nanoid = ["nanoid"]
 yozuk-skill-numeric = []
 yozuk-skill-password = ["rand"]
 yozuk-skill-punycode = ["punycode"]
-yozuk-skill-smalltalk = []
+yozuk-skill-smalltalk = ["rand"]
 yozuk-skill-unit = ["num-bigint"]
 yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
