--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -68,6 +68,8 @@ yozuk-helper-preprocessor = "0.18.0"
 yozuk-helper-platform = "0.17.2"
 yozuk-sdk = "0.18.0"
 once_cell = "1.12.0"
+rmp-serde = { version = "1.1.0", optional = true }
+rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
 
 [features]
 default = []
@@ -108,3 +110,5 @@ yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
 yozuk-skill-consts = []
 yozuk-skill-time = ["time", "time-tz"]
 yozuk-skill-ip = []
+yozuk-skill-msgpack = ["rmp-serde", "rmpv"]
+
