--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -54,6 +54,7 @@ default-skills = [
   "yozuk-skill-consts",
   "yozuk-skill-time",
   "yozuk-skill-ip",
+  "yozuk-skill-msgpack",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -81,6 +82,7 @@ yozuk-skill-qrcode = ["yozuk-core-skillset/yozuk-skill-qrcode"]
 yozuk-skill-consts = ["yozuk-core-skillset/yozuk-skill-consts"]
 yozuk-skill-time = ["yozuk-core-skillset/yozuk-skill-time"]
 yozuk-skill-ip = ["yozuk-core-skillset/yozuk-skill-ip"]
+yozuk-skill-msgpack = ["yozuk-core-skillset/yozuk-skill-msgpack"]
 
 [dev-dependencies]
 once_cell = "1.12.0"
