--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -18,20 +18,17 @@ anyhow = "1.0.56"
 base64 = { version = "0.13.0", optional = true }
 chardetng = "0.1.17"
 clap = { version = "3.1.6", features = ["derive"] }
-crossterm = "0.23.1"
 css-color = "0.2.4"
 encoding_rs = "0.8.31"
 hexyl = "0.10.0"
 json-rpc2 = { version = "0.11.1", optional = true }
 mediatype = "0.19.3"
 owo-colors = "3.3.0"
-rustyline = "9.1.2"
-rustyline-derive = "0.6.0"
 serde = { version = "1.0.137", optional = true }
 serde_derive = { version = "1.0.137", optional = true }
 serde_json = { version = "1.0.81", optional = true }
 shell-words = "1.1.0"
-yozuk = { version = "0.18.0" }
+yozuk = "0.18.0"
 yozuk-sdk = "0.18.0"
 yozuk-helper-platform = "0.17.2"
 
@@ -39,9 +36,15 @@ yozuk-helper-platform = "0.17.2"
 extrasafe = { version = "0.1.2", optional = true }
 syscalls = { version = "0.5.0", optional = true }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+crossterm = "0.23.1"
+time-tz = { version = "1.0.2", features = ["system"] }
+rustyline = "9.1.2"
+rustyline-derive = "0.6.0"
+yozuk = { version = "0.18.0", features = ["rayon"] }
+
 [features]
-default = ["rayon", "rpc", "secure-context"]
-rayon = ["yozuk/rayon"]
+default = ["rpc", "secure-context"]
 rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
 secure-context = ["extrasafe", "syscalls"]
 
