--- a/helpers/platform/Cargo.toml
+++ b/helpers/platform/Cargo.toml
@@ -14,6 +14,10 @@ readme = "README.md"
 
 [dependencies]
 time_crate = { package = "time", version = "0.3.9" }
+time-tz = "1.0.2"
 
-[target.wasm32-unknown-unknown.dependencies]
+[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
 wasm-bindgen = "0.2.80"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+time-tz = { version = "1.0.2", features = ["system"] }
