--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -32,9 +32,9 @@ serde_derive = { version = "1.0.137", optional = true }
 serde_json = { version = "1.0.81", optional = true }
 shell-words = "1.1.0"
 sys-locale = "0.2.0"
-time-tz = { version = "1.0.2", features = ["system"] }
 yozuk = { version = "0.18.0" }
 yozuk-sdk = "0.18.0"
+yozuk-helper-platform = "0.17.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 extrasafe = { version = "0.1.2", optional = true }
