--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -29,7 +29,7 @@ serde_derive = { version = "1.0.137", optional = true }
 serde_json = { version = "1.0.81", optional = true }
 shell-words = "1.1.0"
 sys-locale = "0.2.0"
-yozuk = { version = "0.18.0" }
+yozuk = "0.18.0"
 yozuk-sdk = "0.18.0"
 yozuk-helper-platform = "0.17.2"
 
@@ -42,10 +42,10 @@ crossterm = "0.23.1"
 time-tz = { version = "1.0.2", features = ["system"] }
 rustyline = "9.1.2"
 rustyline-derive = "0.6.0"
+yozuk = { version = "0.18.0", features = ["rayon"] }
 
 [features]
-default = ["rayon", "rpc", "secure-context"]
-rayon = ["yozuk/rayon"]
+default = ["rpc", "secure-context"]
 rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
 secure-context = ["extrasafe", "syscalls"]
 
