--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -32,6 +32,7 @@ sys-locale = "0.2.0"
 yozuk = "0.18.0"
 yozuk-sdk = "0.18.0"
 yozuk-helper-platform = "0.17.2"
+atty = "0.2.14"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 extrasafe = { version = "0.1.2", optional = true }
