--- a/helpers/platform/Cargo.toml
+++ b/helpers/platform/Cargo.toml
@@ -25,3 +25,6 @@ time-tz = { version = "1.0.2", features = ["system"] }
 
 [target.'cfg(target_os = "wasi")'.dependencies]
 wasi = "0.11.0"
+
+[target.'cfg(not(target_os = "wasi"))'.dependencies]
+sys-locale = "0.2.0"
