workflow: make actions/cache failable

--- a/.github/workflows/cross-compilation.yml
+++ b/.github/workflows/cross-compilation.yml
@@ -20,7 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
+      continue-on-error: true
       with:
         path: |
           ~/.cargo/bin/
@@ -55,7 +56,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
+      continue-on-error: true
       with:
         path: |
           ~/.cargo/bin/
