--- a/yozuk-wasm/Cargo.toml
+++ b/yozuk-wasm/Cargo.toml
@@ -21,7 +21,8 @@ once_cell = "1.12.0"
 serde = "1.0.137"
 serde_derive = "1.0.137"
 serde_json = "1.0.81"
-wasm-bindgen = "0.2.80"
 yozuk = "0.18.0"
 yozuk-sdk = "0.18.0"
 
+[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
+wasm-bindgen = "0.2.80"
