--- a/.github/workflows/wasi.yml
+++ b/.github/workflows/wasi.yml
@@ -34,6 +34,6 @@ jobs:
       run: cargo install cargo-wasi
       continue-on-error: true
     - name: Build
-      run: cargo wasi build -p yozuk
+      run: cargo wasi build
     - name: Run test
-      run: cargo wasi test -p yozuk
+      run: cargo wasi test
