use 'Chatbot for Programmers' in the description

--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -3,7 +3,7 @@ name = "yozuk"
 version = "0.18.1"
 edition = "2021"
 authors = ["picoHz <picoHz@outlook.com>"]
-description = "Assistant Bot for Programmers"
+description = "Chatbot for Programmers"
 keywords = ["yozuk"]
 categories = ["text-processing"]
 repository = "https://github.com/yozuk/yozuk"
