--- a/helpers/english/Cargo.toml
+++ b/helpers/english/Cargo.toml
@@ -16,4 +16,6 @@ readme = "README.md"
 Inflector = "0.11.4"
 deunicode = "1.3.1"
 distance = "0.4.0"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 singularize = "0.1.0"
