--- a/helpers/english/Cargo.toml
+++ b/helpers/english/Cargo.toml
@@ -19,3 +19,5 @@ distance = "0.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 singularize = "0.1.0"
+yozuk-helper-preprocessor = "0.18.0"
+yozuk-sdk = "0.18.1"
