--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -68,7 +68,6 @@ yozuk-helper-preprocessor = "0.18.0"
 yozuk-helper-platform = "0.18.1"
 yozuk-sdk = "0.18.2"
 once_cell = "1.12.0"
-rmp-serde = { version = "1.1.0", optional = true }
 rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
 
 [features]
@@ -110,4 +109,4 @@ yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
 yozuk-skill-consts = []
 yozuk-skill-time = ["time", "time-tz"]
 yozuk-skill-ip = []
-yozuk-skill-msgpack = ["rmp-serde", "rmpv"]
+yozuk-skill-msgpack = ["rmpv"]
