--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -69,6 +69,7 @@ yozuk-helper-platform = "0.18.1"
 yozuk-sdk = "0.18.2"
 once_cell = "1.12.0"
 rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
+phf = { version = "0.10.1", features = ["macros"] }
 
 [features]
 default = []
