--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -41,7 +41,7 @@ crossterm = "0.23.1"
 time-tz = { version = "1.0.2", features = ["system"] }
 rustyline = "9.1.2"
 rustyline-derive = "0.6.0"
-yozuk = { version = "0.18.3", features = ["rayon"] }
+yozuk = { version = "0.18.3", features = ["rayon", "wild"] }
 
 [features]
 default = ["rpc", "secure-context"]
