--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ yozuk-sdk = { path = "./yozuk-sdk" }
 yozuk-helper-english = { path = "./helpers/english" }
 yozuk-helper-preprocessor = { path = "./helpers/preprocessor" }
 yozuk-helper-platform = { path = "./helpers/platform" }
+yozuk-helper-filetype = { path = "./helpers/filetype" }
 yozuk-core-skillset = { path = "./skillset" }
 yozuk = { path = "./yozuk" }
 yozuk-model = { path = "./yozuk-model" }
