--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -23,7 +23,6 @@ blake3 = { version = "1.3.1", default-features = false, features = [
   "traits-preview",
 ], optional = true }
 blurhash = { version = "0.1.1", optional = true }
-chardetng = { version = "0.1.17", optional = true }
 clap = { version = "3.1.6", features = ["derive"] }
 const-sha1 = "0.2.0"
 crc_all = { version = "0.2.0", optional = true }
@@ -66,6 +65,7 @@ uuid = { version = "1.0.0", features = ["v4"], optional = true }
 yozuk-helper-english = "0.18.3"
 yozuk-helper-preprocessor = "0.18.0"
 yozuk-helper-platform = "0.18.1"
+yozuk-helper-filetype = "0.18.3"
 yozuk-sdk = "0.18.2"
 once_cell = "1.12.0"
 rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
@@ -75,7 +75,7 @@ phf = { version = "0.10.1", features = ["macros"] }
 default = []
 rayon = ["miller_rabin?/rayon"]
 wild = []
-yozuk-skill-base64 = ["chardetng"]
+yozuk-skill-base64 = []
 yozuk-skill-calc = ["pest", "pest_derive"]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-dice = ["rand", "pest", "pest_derive"]
