--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -16,10 +16,8 @@ readme = "../README.md"
 [dependencies]
 anyhow = "1.0.56"
 base64 = { version = "0.13.0", optional = true }
-chardetng = "0.1.17"
 clap = { version = "3.1.6", features = ["derive"] }
 css-color = "0.2.4"
-encoding_rs = "0.8.31"
 hexyl = "0.10.0"
 json-rpc2 = { version = "0.11.1", optional = true }
 mediatype = "0.19.3"
@@ -31,6 +29,7 @@ shell-words = "1.1.0"
 yozuk = "0.18.3"
 yozuk-sdk = "0.18.2"
 yozuk-helper-platform = "0.18.1"
+yozuk-helper-filetype = "0.18.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 extrasafe = { version = "0.1.2", optional = true }
