--- a/helpers/filetype/Cargo.toml
+++ b/helpers/filetype/Cargo.toml
@@ -15,5 +15,6 @@ readme = "README.md"
 [dependencies]
 chardetng = "0.1.17"
 encoding_rs = "0.8.31"
+file-format = "0.6.0"
 mediatype = "0.19.3"
 mime2ext = "0.1.52"
