--- a/yozuk-wasm/package.json
+++ b/yozuk-wasm/package.json
@@ -10,8 +10,8 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "base64-arraybuffer": "^1.0.2",
     "decompress": "^4.2.1",
-    "download": "^8.0.0",
-    "js-base64": "^3.7.2"
+    "download": "^8.0.0"
   }
 }
