--- a/yozuk-wasm/package.json
+++ b/yozuk-wasm/package.json
@@ -13,5 +13,8 @@
     "base64-arraybuffer": "^1.0.2",
     "decompress": "^4.2.1",
     "download": "^8.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.7.4"
   }
 }
