--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -26,6 +26,7 @@ yozuk-helper-platform = "0.19.2"
 yozuk-sdk = "0.19.1"
 yozuk-model = "0.19.1"
 rand = "0.8.5"
+deunicode = "1.3.1"
 
 [features]
 default = ["default-skills"]
