--- a/helpers/platform/Cargo.toml
+++ b/helpers/platform/Cargo.toml
@@ -16,12 +16,15 @@ readme = "README.md"
 time_crate = { package = "time", version = "0.3.9" }
 time-tz = "1.0.2"
 atty = "0.2.14"
+base64 = "0.13.0"
+anyhow = "1.0.58"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
 wasm-bindgen = "0.2.80"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 time-tz = { version = "1.0.2", features = ["system"] }
+crossterm = "0.24.0"
 
 [target.'cfg(target_os = "wasi")'.dependencies]
 wasi = "0.11.0"
